Klar med uppgiften

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Räkna på det!</title>
 </head>
 <body>
-    <input type="number" id="input1" placeholder="enter number" onfocus="">
-    <input type="number" id="input2" placeholder="enter number" onfocus="">
+    <input type="number" id="input1" placeholder="enter number" onfocus= this.value="">
+    <input type="number" id="input2" placeholder="enter number" onfocus= this.value="">
     <select id="math">
         <option id="addition" value="+">+</option>
         <option id="subctraction" value="-">-</option>
